--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "movie",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://github.com/PeterLI1974024/movie-website",
+  "homepage":"https://peterli1974024.github.io/movie-website",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
@@ -19,7 +19,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy":"npm run build",
-    "deploy": "movie-website -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
